fix: fixed naming, http methods
