# BookStoreService/src/main/java/com/neitex/bookstoreservice/controller/BookController.java
@@ -10,9 +10,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -29,13 +29,13 @@ public class BookController {
   }
 
   @PreAuthorize("hasRole('EDITOR') or hasRole('VIEWER')")
-  @GetMapping("/book/{id}")
+  @GetMapping("/books/{id}")
   public BookResponseDTO getBookById(@PathVariable("id") Long id) {
     return bookService.getBookByID(id);
   }
 
   @PreAuthorize("hasRole('EDITOR') or hasRole('VIEWER')")
-  @GetMapping("/book/by-isbn/{isbn}")
+  @GetMapping("/books/by-isbn/{isbn}")
   public BookResponseDTO getBookByIsbn(@PathVariable("isbn") String isbn) {
     return bookService.findBookByIsbn(isbn);
   }
@@ -47,19 +47,19 @@ public class BookController {
   }
 
   @PreAuthorize("hasRole('EDITOR')")
-  @PutMapping("/book")
+  @PostMapping("/books")
   public ResponseEntity<BookResponseDTO> createBook(@RequestBody BookRequestDTO book) {
     return ResponseEntity.status(HttpStatus.CREATED).body(bookService.createBook(book));
   }
 
   @PreAuthorize("hasRole('EDITOR')")
-  @PostMapping("/book/{id}")
+  @PatchMapping("/books/{id}")
   public BookResponseDTO updateBook(@PathVariable("id") Long id, @RequestBody BookRequestDTO book) {
     return bookService.updateBook(id, book);
   }
 
   @PreAuthorize("hasRole('EDITOR')")
-  @DeleteMapping("/book/{id}")
+  @DeleteMapping("/books/{id}")
   public ResponseEntity<Void> deleteBook(@PathVariable("id") Long id) {
     bookService.deleteBook(id);
     return ResponseEntity.noContent().build();
